# zeroclaw

./: Cargo.toml
crates/zeroclaw-config/src/: lib.rs  policy.rs
crates/zeroclaw-tools/: Cargo.toml
crates/zeroclaw-tools/src/: ask_user.rs  backup_tool.rs  browser.rs  browser_delegate.rs  browser_open.rs  calculator.rs  canvas.rs  claude_code.rs  claude_code_runner.rs  cloud_ops.rs  cloud_patterns.rs  codex_cli.rs  composio.rs  content_search.rs  data_management.rs  discord_search.rs  escalate.rs  file_edit.rs  file_write.rs  gemini_cli.rs  git_operations.rs  glob_search.rs  google_workspace.rs  hardware_board_info.rs  hardware_memory_map.rs  hardware_memory_read.rs  http_request.rs  image_gen.rs  image_info.rs  jira_tool.rs  knowledge_tool.rs  lib.rs  linkedin.rs  linkedin_client.rs  llm_task.rs  mcp_client.rs  mcp_deferred.rs  mcp_transport.rs  memory_export.rs  memory_forget.rs  (+24 more)
crates/zeroclaw-tools/src/microsoft365/: mod.rs
src/agent/: context_compressor.rs
