[package]
name = "zeroclaw-tools"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Tool implementations for agent-callable capabilities."
publish = false

[dependencies]
zeroclaw-api = { path = "../zeroclaw-api" }
zeroclaw-config = { path = "../zeroclaw-config" }
zeroclaw-providers = { path = "../zeroclaw-providers" }
zeroclaw-memory = { path = "../zeroclaw-memory" }
zeroclaw-channels = { path = "../zeroclaw-channels" }
zeroclaw-infra = { path = "../zeroclaw-infra" }
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
directories = "6.0"
futures-util = { version = "0.3", default-features = false }
glob = "0.3"
hex = "0.4"
nanohtml2text = "0.2"
parking_lot = "0.12"
regex = "1.10"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "multipart", "stream"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
sha2 = "0.10"
tempfile = "3.26"
thiserror = "2.0"
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "time", "net", "io-util", "sync", "process", "fs"] }
tokio-stream = { version = "0.1.18", default-features = false, features = ["fs", "sync"] }
tokio-tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7", default-features = false }
toml = "1.0"
tracing = { version = "0.1", default-features = false }
urlencoding = "2.1"
uuid = { version = "1.22", default-features = false, features = ["v4", "std"] }
which = "8.0"

[dev-dependencies]
tempfile = "3.26"
tokio = { version = "1.50", features = ["rt-multi-thread", "macros"] }
